--- a/index.css
+++ b/index.css
@@ -52,43 +52,81 @@ img{
 
 /* navbar ve itemleri */
 
+.NCRealEstateLogo{
+  margin-top: 25px;
+  float: left;
+  width: 80px;
+  height: 80px;
+  border-radius: 50px;
+  margin-left: 50px;
+  clip-path: circle();
+  
+}
+
 .Navbar-I1{
-    margin-right: auto;
-    font-size: 24px;
-    margin-left:25px;
+  position: relative;
+  display: inline;
+  margin-top: 25px;
+  margin-right: auto;
+  font-size: 24px;
+  margin-left:25px;
 }
 
 
 .Navbar-I2{
-    margin-right: 2rem;
+  position: relative;
+  display: inline;
+  margin-top: 25px;
+  margin-right: auto;
+  font-size: 24px;
+  margin-left:25px;
+  left: -170px;
 }
 
 .Navbar-I3{
-    margin-right: 2rem;
+  position: relative;
+  display: inline;
+  margin-top: 25px;
+  margin-right: auto;
+  font-size: 24px;
+  left: -320px;
 }
 
 
 .Navbar-I4{
-    margin-right: 2rem;
+  position: relative;
+  display: inline;
+  margin-top: 25px;
+  margin-right: auto;
+  font-size: 24px;
+  left: -465px;
 }
 
 
 .Navbar-I5{
-    margin-right: 2rem;
+  position: relative;
+  display: inline;
+  margin-top: 25px;
+  margin-right: auto;
+  font-size: 24px;
+  left: -610px;
 }
 
 
 .Navbar-I6{
-    margin-right: 2rem;
+  margin-top: 25px; 
+  margin-right: 3rem;
+  
 }
 
 
 .Navbar-I7{
-    margin-right: 2rem;
-    border: 2px solid;
-    background-color: green;
-    border-radius: 4px;
-    padding: 5px 12px;
+  margin-top: 25px;
+  margin-right: 4rem;
+  border: 2px solid;
+  background-color: green;
+  border-radius: 4px;
+  padding: 5px 12px;
 }
 
 .Navbar-I7:hover{
@@ -115,13 +153,29 @@ img{
 
 .littlebox-blackbox{
     
-   width: 900px;
-   height: 62px;
-   background-color:rgb(34, 33, 33);
-   position: relative;
-   top:-550px;
-   left:470px;
+  width: 600px;
+  height: 70px;
+  background-color:rgb(34, 33, 33);
+  position: relative;
+  top:-550px;
+  left:470px;
    
+}
+
+#search{
+  position: relative;
+  height: 35px;
+  width: 400px;
+  top: 25px;
+  right: 87px;
+  background-color: rgb(34, 33, 33);
+}
+
+#subbutton{
+  position: relative;
+  top: 20px;
+  right: 40px;
+  border-radius: 3px;
 }
 
 .littlebox-blackbox a{
@@ -130,11 +184,11 @@ img{
 }
 
 #link1{
-    background-color: rgb(34, 33, 33);
-    position: relative;
-    left:15px;
-    font-size: 28px;
-    top:10px;
+  background-color: rgb(34, 33, 33);
+  position: relative;
+  left:40px;
+  font-size: 20px;
+  top:0px;
 }
 
 #link1:hover{
@@ -144,9 +198,9 @@ img{
 #link2{
   background-color: rgb(34, 33, 33);
   position: relative;
-  left:175px;
-  font-size: 28px;
-  top:10px;
+  left:170px;
+  font-size: 20px;
+  top:0px;
   
 }
 
@@ -157,9 +211,9 @@ img{
 #link3{
   background-color: rgb(34, 33, 33);
   position: relative;
-  left:375px;
-  font-size: 28px;
-  top:10px;
+  left:300px;
+  font-size: 20px;
+  top:0px;
 }
 
 #link3:hover{
@@ -214,6 +268,9 @@ img{
 
 
 #ExploreCage{
+  height: 180px;
+  position: relative;
+  bottom: 80px;
   display:flex;
   flex-direction:row;
   align-items: center;
@@ -221,17 +278,23 @@ img{
 
 }
 #ExploreTitle{
- color:white;
- position: relative;;
- left:120px;
+  white-space: nowrap; 
+  color:white;
+  position: relative;
+  left: 120px;
+  bottom: 30px; 
+  margin-left: 60px;
+  margin-bottom: 80px;
 }
 
 #Buying{
+  position: relative;
   color:white;
-  margin-right: 2rem;
+  right: 190px;
+  margin-bottom: 50px;
   border: 2px solid;
   border-radius: 4px;
-  padding: 2px 7px;
+  padding: 2px 6px;
 }
 
 #Buying:hover{
@@ -240,8 +303,10 @@ img{
 }
 
 #Selling{
+  position: relative;
   color:white;
-  margin-right: 2rem;
+  right: 170px;
+  margin-bottom: 50px;
   border: 2px solid;
   border-radius: 4px;
   padding: 2px 7px;
@@ -253,8 +318,10 @@ img{
 }
 
 #Renting{
+  position: relative;
   color:white;
-  margin-right: 2rem;
+  right: 150px;
+  margin-bottom: 50px;
   border: 2px solid;
   border-radius: 4px;
   padding: 2px 7px;
@@ -266,47 +333,60 @@ img{
 }
 
 #k1img{
-  width:250px;
-
-  margin-right: 2rem;
-  border: 5px solid;
-  border-radius: 4px;
-  padding: 0px 0px;
-  color:rgb(36,156,76);
+  position: relative;
+     left: -60px;
+     margin-left: -50px;
+     width:235px;
+     margin-bottom: 45px;
+     margin-right: 2rem;
+     border: 4px solid;
+     border-radius: 0px;
+     padding: 0px 0px;
+     color:rgb(36,156,76);
 }
 
 #k15img{
-  width:250px;
-  
-  margin-right: 2rem;
-  border: 5px solid;
-  border-radius: 4px;
-  padding: 0px 0px;
-  color:rgb(36,156,76);
+  position: relative;
+     left: -60px;
+     width:235px;
+     margin-bottom: 45px;
+     margin-right: 2rem;
+     border: 4px solid;
+     border-radius: 0px;
+     padding: 0px 0px;
+     color:rgb(36,156,76);
 }
 
 #k10img{
-  width:250px;
-  
-  margin-right: 2rem;
-  border: 5px solid;
-  border-radius: 4px;
-  padding: 0px 0px;
-  color:rgb(36,156,76);
+  position: relative;
+     left: -60px;
+     width:235px;
+     margin-bottom: 45px;
+     margin-right: 2rem;
+     border: 4px solid;
+     border-radius: 0px;
+     padding: 0px 0px;
+     color:rgb(36,156,76);
 }
 
 #k2img{
-  width:250px;
-  
-  margin-right: 2rem;
-  border: 5px solid;
-  border-radius: 4px;
-  padding: 0px 0px;
-  color:rgb(36,156,76);
+  position: relative;
+     left: -60px;
+     width:235px;
+     margin-bottom: 45px;
+     margin-right: 2rem;
+     border: 4px solid;
+     border-radius: 0px;
+     padding: 0px 0px;
+     color:rgb(36,156,76);
 }
 
 
 .IconSearch{
+  position: relative;
+  right: -120px;
+  width: 1000px;
+  margin-top: -120px;
   display: flex;
   flex-direction:row;
   align-items: center;
@@ -315,20 +395,20 @@ img{
 }
 
 #IconSearch1{
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
   border-radius: 50%;
 }
 
 #IconSearch2{
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
   border-radius: 50%;
 }
 
 #IconSearch3{
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
   border-radius: 50%;
 }
 
@@ -341,20 +421,20 @@ img{
 #Text1{
   position: relative;
   top:10px;
-  left: 0px;
+  left: 100px;
   font-size: 20px;
 }
 
 #Text2{
   position: relative;
   top:-40px;
-  left: 585px;
+  left: 560px;
   font-size: 20px;
 }
 
 #Text3{
   position: relative;
   top:-90px;
-  left: 1130px;
+  left: 980px;
   font-size: 20px;
 }
