--- a/BuyerPage.css
+++ b/BuyerPage.css
@@ -31,83 +31,86 @@ body{
    
    /* navbar konteynırı */
    
-   .Navbar_Container{
-       font-size:18px ;
-       
-       background-color:rgb(34, 33, 33);
-       width:auto;
-       height: 80px;
-   
-       /* position:fixed; */
-       
-       /* border: 2px solid; */
-   
-       font-size: 22px;
-   
-       display: flex;
-       justify-content:flex-end;
-       align-items:center;
-   
-   }
-   
-   
-   /* navbar ve itemleri */
-   .NCRealEstateLogo{
-       margin-top: 25px;
-       float: left;
-       width: 80px;
-       height: 80px;
-       border-radius: 50px;
-       margin-left: 50px;
-       clip-path: circle();
-       
-   }
-   
-   .Navbar-I1{
-       position: relative;
-       display: inline;
-       margin-top: 25px;
-       margin-right: auto;
-       font-size: 24px;
-       margin-left:25px;
-   }
-   
-   .Navbar-I2{
-    position: relative;
-    display: inline;
-    margin-top: 25px;
+   header {
+    margin-bottom: -50px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px 50px;
+    background-color:rgb(34, 33, 33);
+  }
+  
+  
+  /* navbar ve itemleri */
+  
+  header li {
+    list-style: none;
+    display: inline-block;
+    padding: 0 20px;
+    list-style-type:none;
+  }
+  
+  header a {
+    text-decoration: none;
+    color:white;
+    transition: all 0.3s ease 0s;
+  }
+  
+  header a:hover {
+    color: rgb(9, 196, 108);
+  }
+
+    
+  
+  .NCRealEstateLogo{
     margin-right: auto;
-    font-size: 24px;
-    margin-left:25px;
-    left: -270px;
-   }
+    width: 85px;
+    height: 80px;
+    border-radius: 50px;
+    clip-path: circle();
+  }
    
-   .Navbar-I3{
-    position: relative;
-    display: inline;
+  .Navbar-I2{
+    font-size: 24px;
     margin-top: 25px;
-    margin-right: auto;
+  }
+  
+  .Navbar-I3{
     font-size: 24px;
-    left: -520px;
-   }
-   
-   
-   .Navbar-I5{
-    position: relative;
-    display: inline;
     margin-top: 25px;
-    margin-right: auto;
+    
+  }
+  
+  
+  .Navbar-I5{
     font-size: 24px;
-    left: -765px;
-   }
-   
-   
+    margin-top: 25px;
+    
+  }
+  
    .UserName{
-    position: relative;
+    font-size: 24px;
     display: inline;
     margin-top: 25px;
-    left: -55px;
    }
+
+   @media all and (max-width: 600px) {  
+    
+    header {  
+      flex-wrap: wrap;  
+    }  
+      
+    header > li {  
+      flex-basis: 50%;  
+    }
+  
+  }
+  
+  @media all and (max-width: 400px) {  
+    header > li {  
+      flex-basis: 100%;  
+    }  
+  }
    
    /* foto  */
    
@@ -126,104 +129,67 @@ body{
    /* ortadaki karakutu */
    
    .littlebox-blackbox{
-      width: 600px;
-      height: 70px;
-      background-color:rgb(34, 33, 33);
-      position: relative;
-      top:-550px;
-      left:630px;
-      
-   }
+  
+    width: 550px;
+    height: 60px;
+    background-color:rgb(34, 33, 33);
+    position: relative;
+    top:-550px;
+    left:630px;
    
-   #search{
-     position: relative;
-     height: 35px;
-     width: 400px;
-     top: 25px;
-     right: 87px;
-     background-color: rgb(34, 33, 33);
-   }
-   
-   #subbutton{
-     position: relative;
-     top: 20px;
-     right: 40px;
-     border-radius: 3px;
-   }
-   
-   .littlebox-blackbox a{
-       color:white;
-       font-size: 20px;
-   }
-   
-   #link1{
-       background-color: rgb(34, 33, 33);
-       position: relative;
-       left:150px;
-       font-size: 20px;
-       top:0px;
-   }
-   
-   #link1:hover{
-     color:rgb(9, 196, 108);
-   }
-   
-   #link2{
-     background-color: rgb(34, 33, 33);
-     position: relative;
-     left:300px;
-     font-size: 20px;
-     top:0px;
-     
-   }
-   
-   #link2:hover{
-     color:rgb(9, 196, 108);
-   }
-   
-   #link3{
-     background-color: rgb(34, 33, 33);
-     position: relative;
-     left:300px;
-     font-size: 20px;
-     top:0px;
-   }
-   
-   #link3:hover{
-     color:rgb(9, 196, 108);
-   }
+  }
+  
+  
+  #search{
+    position: relative;
+    height: 35px;
+    width: 400px;
+    right: 60px;
+    background-color: rgb(34, 33, 33);
+  }
+  
+  #subbutton{
+    position: relative;
+    top: 0px;
+    right: 20px;
+    border-radius: 3px;
+  }
+  
+  .littlebox-blackbox a{
+      color:white;
+      font-size: 20px;
+  }
    
     
      
      /* Style the search box inside the navigation bar */
-     .littlebox input[type=text] {
-       padding: 6px;
-       margin-top: 8px;
-       font-size: 17px;
-       border: none;
-     }
-     
-     .littlebox .search-container {
-       float: right;
-     }
-   
-     .littlebox .search-container button {
-       float: right;
-       padding: 6px;
-       margin-top: 8px;
-       margin-right: 16px;
-       background: green;
-       font-size: 17px;
-       border: none;
-       cursor: pointer;
-       color:white;
-     }
-     
-     .littlebox .search-container button:hover {
-       background: black;
-       color:rgb(9, 196, 108);
-     }
-     
+  .littlebox input[type=text] {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+  }
+  
+  .littlebox .search-container {
+    float: right;
+  }
+
+  .littlebox .search-container button {
+    float: right;
+    padding: 6px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: green;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+    color:white;
+  }
+  
+  .littlebox .search-container button:hover {
+    background: black;
+    color:rgb(9, 196, 108);
+  }
      /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
      @media screen and (max-width: 600px) {
        .Navbar_Container a, .littlebox input[type=text] {
@@ -250,165 +216,107 @@ body{
      justify-content:space-evenly;
    
    }
-   #ExploreTitle{
-    white-space: nowrap; 
-    color:white;
-    position: relative;
-    left: 85px;
-    bottom: 30px; 
-    margin-left: 60px;
-    margin-bottom: 80px;
-   }
+  
    
-   #Buying{
-     position: relative;
-     color:white;
-     right: 190px;
-     margin-bottom: 50px;
-     border: 2px solid;
-     border-radius: 4px;
-     padding: 2px 6px;
-   }
-   
-   #Buying:hover{
-     background-color:rgb(9, 196, 108);
-     color: black;
-   }
-   
-   #Selling{
-     position: relative;
-     color:white;
-     right: 170px;
-     margin-bottom: 50px;
-     border: 2px solid;
-     border-radius: 4px;
-     padding: 2px 7px;
-   }
-   
-   #Selling:hover{
-     background-color:rgb(9, 196, 108);
-     color: black;
-   }
-   
-   #Renting{
-     position: relative;
-     color:white;
-     right: 150px;
-     margin-bottom: 50px;
-     border: 2px solid;
-     border-radius: 4px;
-     padding: 2px 7px;
-   }
-   
-   #Renting:hover{
-     background-color:rgb(9, 196, 108);
-     color: black;
-   }
-   
-   #k1img{
-     position: relative;
-     left: -60px;
-     margin-left: -50px;
-     width:235px;
-     margin-bottom: 45px;
-     margin-right: 2rem;
-     border: 4px solid;
-     border-radius: 0px;
-     padding: 0px 0px;
-     color:rgb(36,156,76);
-   }
-   
-   #k15img{
-     position: relative;
-     left: -60px;
-     width:235px;
-     margin-bottom: 45px;
-     margin-right: 2rem;
-     border: 4px solid;
-     border-radius: 0px;
-     padding: 0px 0px;
-     color:rgb(36,156,76);
-   }
-   
-   #k10img{
-     position: relative;
-     left: -60px;
-     width:235px;
-     margin-bottom: 45px;
-     margin-right: 2rem;
-     border: 4px solid;
-     border-radius: 0px;
-     padding: 0px 0px;
-     color:rgb(36,156,76);
-   }
-   
-   #k2img{
-     position: relative;
-     left: -60px;
-     width:235px;
-     margin-bottom: 45px;
-     margin-right: 2rem;
-     border: 4px solid;
-     border-radius: 0px;
-     padding: 0px 0px;
-     color:rgb(36,156,76);
-   }
+   #k1img{ 
+    width:235px;
+    margin-bottom: 45px;
+    border: 4px solid;
+    border-radius: 0px;
+    padding: 0px 0px;
+    color:rgb(36,156,76);
+}
+
+#k15img{
+    width:235px;
+    margin-bottom: 45px;
+    border: 4px solid;
+    border-radius: 0px;
+    padding: 0px 0px;
+    color:rgb(36,156,76);
+}
+
+#k10img{ 
+    width:235px;
+    margin-bottom: 45px;
+    border: 4px solid;
+    border-radius: 0px;
+    padding: 0px 0px;
+    color:rgb(36,156,76);
+}
+
+#k2img{
+    width:235px;
+    margin-bottom: 45px;
+    border: 4px solid;
+    border-radius: 0px;
+    padding: 0px 0px;
+    color:rgb(36,156,76);
+}
+
+#k13img{
+  width:235px;
+  margin-bottom: 45px;
+  border: 4px solid;
+  border-radius: 0px;
+  padding: 0px 0px;
+  color:rgb(36,156,76);
+}
    
    
-   .IconSearch{
-     position: relative;
-     right: -120px;
-     width: 1000px;
-     margin-top: -120px;
-     display: flex;
-     flex-direction:row;
-     align-items: center;
-     justify-content:space-between;
-   
-   }
-   
-   #IconSearch1{
-     height: 120px;
-     width: 120px;
-     border-radius: 50%;
-   }
-   
-   #IconSearch2{
-     height: 120px;
-     width: 120px;
-     border-radius: 50%;
-   }
-   
-   #IconSearch3{
-   
-     height: 120px;
-     width: 120px;
-     border-radius: 50%;
-   }
-   
-   .IconOrText-White{
-     color:white;
-   }
-   
-   
-   #Text1{
-     position: relative;
-     top:10px;
-     left: 100px;
-     font-size: 20px;
-   }
-   
-   #Text2{
-     position: relative;
-     top:-40px;
-     left: 560px;
-     font-size: 20px;
-   }
-   
-   #Text3{
-     position: relative;
-     top:-90px;
-     left: 980px;
-     font-size: 20px;
-   }
-   
+.IconSearch{
+  margin-top: -120px;
+  display: flex;
+  flex-direction:row;
+  align-items: center;
+  justify-content:space-between;
+
+}
+
+#IconSearch1{
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+#IconSearch2{
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+#IconSearch3{
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+.IconOrText-White{
+  color:white;
+}
+
+
+.text{
+ display: flex;
+ align-items: baseline;
+ justify-content:space-between;
+ margin-top: 5px;
+}
+
+#Text1{
+  
+  margin-left: -5px;
+  font-size: 17px;
+}
+
+#Text2{
+  
+  margin-right: -10px;
+  font-size: 17px;
+}
+
+#Text3{
+  
+  margin-right: -23px;
+  font-size: 17px;
+}
