--- a/SellerPage.css
+++ b/SellerPage.css
@@ -31,102 +31,97 @@ body{
    
    /* navbar konteynırı */
    
-   .Navbar_Container{
-       font-size:18px ;
-       
-       background-color:rgb(34, 33, 33);
-       width:auto;
-       height: 80px;
-   
-       /* position:fixed; */
-       
-       /* border: 2px solid; */
-   
-       font-size: 22px;
-   
-       display: flex;
-       justify-content:flex-end;
-       align-items:center;
-   
-   }
-   
-   
-   /* navbar ve itemleri */
-   .NCRealEstateLogo{
-    margin-top: 25px;
-    float: left;
-    width: 80px;
+   header {
+    margin-bottom: -50px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px 50px;
+    background-color:rgb(34, 33, 33);
+  }
+  
+  
+  /* navbar ve itemleri */
+  
+  header li {
+    list-style: none;
+    display: inline-block;
+    padding: 0 20px;
+    list-style-type:none;
+  }
+  
+  header a {
+    text-decoration: none;
+    color:white;
+    transition: all 0.3s ease 0s;
+  }
+  
+  header a:hover {
+    color: rgb(9, 196, 108);
+  }
+
+    
+  
+  .NCRealEstateLogo{
+    margin-right: auto;
+    width: 85px;
     height: 80px;
     border-radius: 50px;
-    margin-left: 50px;
     clip-path: circle();
-    
   }
-  
-  .Navbar-I1{
-    position: relative;
-    display: inline;
-    margin-top: 25px;
-    margin-right: auto;
-    font-size: 24px;
-    margin-left:25px;
-  }
-  
-  
+   
   .Navbar-I2{
-    position: relative;
-    display: inline;
-    margin-top: 25px;
-    margin-right: auto;
     font-size: 24px;
-    margin-left:25px;
-    left: -191px;
+    margin-top: 25px;
   }
   
   .Navbar-I3{
-    position: relative;
-    display: inline;
-    margin-top: 25px;
-    margin-right: auto;
     font-size: 24px;
-    left: -362px;
+    margin-top: 25px;
+    
   }
-  
-  
+
   .Navbar-I4{
-    position: relative;
-    display: inline;
-    margin-top: 25px;
-    margin-right: auto;
     font-size: 24px;
-    left: -529px;
+    margin-top: 25px;
+    
   }
   
   
   .Navbar-I5{
-    position: relative;
+    font-size: 24px;
+    margin-top: 25px;
+    
+  }
+  
+   .UserName{
+    font-size: 24px;
     display: inline;
     margin-top: 25px;
-    margin-right: auto;
-    font-size: 24px;
-    left: -695px;
+   }
+
+   @media all and (max-width: 600px) {  
+    
+    header {  
+      flex-wrap: wrap;  
+    }  
+      
+    header > li {  
+      flex-basis: 50%;  
+    }
+  
+  }
+  
+  @media all and (max-width: 400px) {  
+    header > li {  
+      flex-basis: 100%;  
+    }  
   }
    
-   
-   .UserName{
-    position: relative;
-    display: inline;
-    margin-top: 25px;
-    right: 10px;
-   }
-   
-   .Verificated{
-    right: 20px;
-    position: relative;
-    display: inline;
+   #Verificated{
+    margin-top:-25px;
     width: 60px;
     height: 40px;
-    clip-path: circle();
    }
 
    /* foto  */
@@ -146,72 +141,36 @@ body{
    /* ortadaki karakutu */
    
    .littlebox-blackbox{
-      width: 600px;
-      height: 70px;
-      background-color:rgb(34, 33, 33);
-      position: relative;
-      top:-550px;
-      left:630px;
-      
-   }
+  
+    width: 550px;
+    height: 60px;
+    background-color:rgb(34, 33, 33);
+    position: relative;
+    top:-550px;
+    left:630px;
    
-   #search{
-     position: relative;
-     height: 35px;
-     width: 400px;
-     top: 25px;
-     right: 87px;
-     background-color: rgb(34, 33, 33);
-   }
-   
-   #subbutton{
-     position: relative;
-     top: 20px;
-     right: 40px;
-     border-radius: 3px;
-   }
-   
-   .littlebox-blackbox a{
-       color:white;
-       font-size: 20px;
-   }
-   
-   #link1{
-       background-color: rgb(34, 33, 33);
-       position: relative;
-       left:40px;
-       font-size: 20px;
-       top:0px;
-   }
-   
-   #link1:hover{
-     color:rgb(9, 196, 108);
-   }
-   
-   #link2{
-     background-color: rgb(34, 33, 33);
-     position: relative;
-     left:170px;
-     font-size: 20px;
-     top:0px;
-     
-   }
-   
-   #link2:hover{
-     color:rgb(9, 196, 108);
-   }
-   
-   #link3{
-     background-color: rgb(34, 33, 33);
-     position: relative;
-     left:300px;
-     font-size: 20px;
-     top:0px;
-   }
-   
-   #link3:hover{
-     color:rgb(9, 196, 108);
-   }
+  }
+  
+  
+  #search{
+    position: relative;
+    height: 35px;
+    width: 400px;
+    right: 60px;
+    background-color: rgb(34, 33, 33);
+  }
+  
+  #subbutton{
+    position: relative;
+    top: 0px;
+    right: 20px;
+    border-radius: 3px;
+  }
+  
+  .littlebox-blackbox a{
+      color:white;
+      font-size: 20px;
+  }
    
     
      
@@ -261,174 +220,117 @@ body{
    
    
    #ExploreCage{
-     height: 180px;
-     position: relative;
-     bottom: 80px;
-     display:flex;
-     flex-direction:row;
-     align-items: center;
-     justify-content:space-evenly;
+    height: 180px;
+    position: relative;
+    bottom: 80px;
+    display:flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content:space-evenly;
    
    }
-   #ExploreTitle{
-     white-space: nowrap; 
-     color:white;
-     position: relative;
-     left: 120px;
-     bottom: 30px; 
-     margin-left: 60px;
-     margin-bottom: 80px;
-   }
-   
-   #Buying{
-     position: relative;
-     color:white;
-     right: 190px;
-     margin-bottom: 50px;
-     border: 2px solid;
-     border-radius: 4px;
-     padding: 2px 6px;
-   }
-   
-   #Buying:hover{
-     background-color:rgb(9, 196, 108);
-     color: black;
-   }
-   
-   #Selling{
-     position: relative;
-     color:white;
-     right: 170px;
-     margin-bottom: 50px;
-     border: 2px solid;
-     border-radius: 4px;
-     padding: 2px 7px;
-   }
-   
-   #Selling:hover{
-     background-color:rgb(9, 196, 108);
-     color: black;
-   }
-   
-   #Renting{
-     position: relative;
-     color:white;
-     right: 150px;
-     margin-bottom: 50px;
-     border: 2px solid;
-     border-radius: 4px;
-     padding: 2px 7px;
-   }
-   
-   #Renting:hover{
-     background-color:rgb(9, 196, 108);
-     color: black;
-   }
+  
    
    #k1img{
-     position: relative;
-     left: -60px;
-     margin-left: -50px;
-     width:235px;
-     margin-bottom: 45px;
-     margin-right: 2rem;
-     border: 4px solid;
-     border-radius: 0px;
-     padding: 0px 0px;
-     color:rgb(36,156,76);
+    width:235px;
+    margin-bottom: 45px;
+    border: 4px solid;
+    border-radius: 0px;
+    padding: 0px 0px;
+    color:rgb(36,156,76);
    }
    
    #k15img{
-     position: relative;
-     left: -60px;
-     width:235px;
-     margin-bottom: 45px;
-     margin-right: 2rem;
-     border: 4px solid;
-     border-radius: 0px;
-     padding: 0px 0px;
-     color:rgb(36,156,76);
+    width:235px;
+    margin-bottom: 45px;
+    border: 4px solid;
+    border-radius: 0px;
+    padding: 0px 0px;
+    color:rgb(36,156,76);
    }
    
    #k10img{
-     position: relative;
-     left: -60px;
-     width:235px;
-     margin-bottom: 45px;
-     margin-right: 2rem;
-     border: 4px solid;
-     border-radius: 0px;
-     padding: 0px 0px;
-     color:rgb(36,156,76);
+    width:235px;
+    margin-bottom: 45px;
+    border: 4px solid;
+    border-radius: 0px;
+    padding: 0px 0px;
+    color:rgb(36,156,76);
    }
    
    #k2img{
-     position: relative;
-     left: -60px;
-     width:235px;
-     margin-bottom: 45px;
-     margin-right: 2rem;
-     border: 4px solid;
-     border-radius: 0px;
-     padding: 0px 0px;
-     color:rgb(36,156,76);
+    width:235px;
+    margin-bottom: 45px;
+    border: 4px solid;
+    border-radius: 0px;
+    padding: 0px 0px;
+    color:rgb(36,156,76);
+   }
+
+   #k14img{
+    width:235px;
+    margin-bottom: 45px;
+    border: 4px solid;
+    border-radius: 0px;
+    padding: 0px 0px;
+    color:rgb(36,156,76);
    }
    
-   
+   /* icons */
+
    .IconSearch{
-     position: relative;
-     right: -120px;
-     width: 1000px;
-     margin-top: -120px;
-     display: flex;
-     flex-direction:row;
-     align-items: center;
-     justify-content:space-between;
-   
-   }
-   
-   #IconSearch1{
-     height: 120px;
-     width: 120px;
-     border-radius: 50%;
-   }
-   
-   #IconSearch2{
-     height: 120px;
-     width: 120px;
-     border-radius: 50%;
-   }
-   
-   #IconSearch3{
-   
-     height: 120px;
-     width: 120px;
-     border-radius: 50%;
-   }
-   
-   .IconOrText-White{
-     color:white;
-   }
-   
-   
-   #Text1{
-     position: relative;
-     top:10px;
-     left: 100px;
-     font-size: 20px;
-   }
-   
-   #Text2{
-     position: relative;
-     top:-40px;
-     left: 560px;
-     font-size: 20px;
-   }
-   
-   #Text3{
-     position: relative;
-     top:-90px;
-     left: 980px;
-     font-size: 20px;
-   }
-   
+    margin-top: -120px;
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content:space-between;
+  
+  }
+  
+  #IconSearch1{
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+  }
+  
+  #IconSearch2{
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+  }
+  
+  #IconSearch3{
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+  }
+  
+  .IconOrText-White{
+    color:white;
+  }
+  
+  
+  .text{
+   display: flex;
+   align-items: baseline;
+   justify-content:space-between;
+   margin-top: 5px;
+  }
+  
+  #Text1{
+    
+    margin-left: -5px;
+    font-size: 17px;
+  }
+  
+  #Text2{
+    
+    margin-right: -10px;
+    font-size: 17px;
+  }
+  
+  #Text3{
+    
+    margin-right: -23px;
+    font-size: 17px;
+  }
