--- a/index.css
+++ b/index.css
@@ -3,8 +3,8 @@ body{
  overflow-x: hidden;
 }
 
-a{
-    text-decoration:none;
+a:link{
+  text-decoration: none!important;
 }
 
 .Navbar_Container a{
@@ -51,7 +51,7 @@ header li {
 
 header a {
   text-decoration: none;
-  color:white;
+  color: var(--white);
   transition: all 0.3s ease 0s;
 }
 
@@ -116,6 +116,7 @@ header a:hover {
 .Navbar-I7:hover{
   background:black;
   color:green;
+  transition: all 0.5s ease 0s;
 }
 
 
@@ -157,35 +158,32 @@ header a:hover {
  
 /* ortadaki karakutu */
 
-.littlebox-blackbox{
-  
-  width: 550px;
+.littlebox{
+  border: 2px solid;
+  color:grey;
+  border-radius: 8px;
+  padding: 0px 0px;
+  width: 500px;
   height: 60px;
   background-color:rgb(34, 33, 33);
-  position: relative;
-  top:-550px;
-  left:630px;
- 
+  position: flex;
+  margin-right:auto;
 }
 
-
 #search{
-  position: relative;
+  position: flex;
   height: 35px;
   width: 400px;
-  right: 60px;
   background-color: rgb(34, 33, 33);
 }
 
 #subbutton{
-  position: relative;
-  top: 0px;
-  right: 20px;
+  position: flex;
   border-radius: 3px;
 }
 
 .littlebox-blackbox a{
-    color:white;
+    color: var(--white);
     font-size: 20px;
 }
 
@@ -198,6 +196,7 @@ header a:hover {
     margin-top: 8px;
     font-size: 17px;
     border: none;
+    color:rgb(9, 196, 108);
   }
   
   .littlebox .search-container {
@@ -213,34 +212,22 @@ header a:hover {
     font-size: 17px;
     border: none;
     cursor: pointer;
-    color:white;
+    color: var(--white);
   }
   
   .littlebox .search-container button:hover {
     background: black;
     color:rgb(9, 196, 108);
+    transition: all 0.5s ease 0s;
   }
   
-  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-  @media screen and (max-width: 600px) {
-    .Navbar_Container a, .littlebox input[type=text] {
-      float: none;
-      display: block;
-      text-align: left;
-      width: 100%;
-      margin: 0;
-      padding: 14px;
-    }
-    .littlebox input[type=text] {
-      border: 1px solid #ccc;
-    }
-  }
+  
 
 
 #ExploreCage{
   height: 180px;
   position: relative;
-  bottom: 80px;
+  bottom: 10px;
   display:flex;
   flex-direction:row;
   align-items: center;
@@ -256,6 +243,7 @@ header a:hover {
      border-radius: 0px;
      padding: 0px 0px;
      color:rgb(36,156,76);
+     transition: width 1s;
 }
 
 #k1img{ 
@@ -265,6 +253,7 @@ header a:hover {
      border-radius: 0px;
      padding: 0px 0px;
      color:rgb(36,156,76);
+     transition: width 1s;
 }
 
 #k15img{
@@ -274,6 +263,7 @@ header a:hover {
      border-radius: 0px;
      padding: 0px 0px;
      color:rgb(36,156,76);
+     transition: width 1s;
 }
 
 #k10img{ 
@@ -283,6 +273,7 @@ header a:hover {
      border-radius: 0px;
      padding: 0px 0px;
      color:rgb(36,156,76);
+     transition: width 1s;
 }
 
 #k2img{
@@ -292,11 +283,33 @@ header a:hover {
      border-radius: 0px;
      padding: 0px 0px;
      color:rgb(36,156,76);
+     transition: width 1s;
+}
+
+#k10img:hover{
+  width: 270px;
+}
+
+#k15img:hover{
+  width: 270px;
+}
+
+#k1img:hover{
+  width: 270px;
+}
+
+#k5img:hover{
+  width: 270px;
+}
+
+#k2img:hover{
+  width: 270px;
 }
 
 
+
 .IconSearch{
-  margin-top: -120px;
+  margin-top: -60px;
   display: flex;
   flex-direction:row;
   align-items: center;
@@ -308,18 +321,35 @@ header a:hover {
   height: 120px;
   width: 120px;
   border-radius: 50%;
+  transition: width 1s;
 }
 
 #IconSearch2{
   height: 120px;
   width: 120px;
   border-radius: 50%;
+  transition: width 1s;
 }
 
 #IconSearch3{
   height: 120px;
   width: 120px;
   border-radius: 50%;
+}
+
+#IconSearch1:hover{
+  transform: scale(1.1);
+  transition: all 0.5s ease 0s;
+}
+
+#IconSearch2:hover{
+  transform: scale(1.1);
+  transition: all 0.5s ease 0s;
+}
+
+#IconSearch3:hover{
+  transform: scale(1.1);
+  transition: all 0.5s ease 0s;
 }
 
 .IconOrText-White{
@@ -351,3 +381,292 @@ header a:hover {
   margin-right: -23px;
   font-size: 17px;
 }
+
+
+
+
+
+
+/*-----------------------------------*\
+  #Rootcuk
+\*-----------------------------------*/
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+:root{
+  --cultured-2: hsl(192, 24%, 96%);
+
+  --raisin-black-1: hsl(227, 29%, 13%);
+  --raisin-black-2: hsl(229, 17%, 19%);
+
+  --cultured-greyblack: rgb(34, 33, 33);
+
+  --section-padding: 50px;
+
+  --white: hsl(0, 0%, 100%);
+
+  --greyblack:rgb(34, 33, 33);
+
+  --greeny: rgb(36,156,76);
+
+  --shadow-1: 0 5px 20px 0 hsla(219, 56%, 21%, 0.1);
+  --shadow-2: 0 16px 32px hsl(200, 15%, 43%);
+
+
+  --orange-soda: hsl(9, 100%, 62%);
+
+  --cadet: hsl(200, 15%, 43%);
+
+  --fs-5: 0.875rem;
+
+  --opal: hsl(180, 20%, 62%);
+
+  --fw-600: 600;
+
+  --transition: 0.25s ease;
+
+  --fs-1: 1.875rem;
+  --fs-2: 1.5rem;
+  --fs-3: 1.375rem;
+  --fs-4: 1.125rem;
+  --fs-5: 0.875rem;
+  --fs-6: 0.813rem;
+  --fs-7: 0.75rem;
+
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
+
+  --ff-poppins: "Poppins", sans-serif;
+
+  
+}
+
+
+a,
+img,
+span,
+button,
+ion-icon { display: block; }
+
+
+
+/*-----------------------------------*\
+  #Scrollbarcık
+\*-----------------------------------*/
+
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track { background: var(--greyblack); }
+
+::-webkit-scrollbar-thumb {
+  background: var(--greeny);
+  border-left: 0px solid var(--white);
+}
+
+
+
+
+
+
+
+/*-----------------------------------*\
+  #SERVICE
+\*-----------------------------------*/
+
+
+
+.service-list > li { width: calc(32.40% - 20px); }
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container { padding-inline: 15px; }
+
+.section-title {
+  text-align: var(--text-align, center);
+  margin-bottom: var(--margin-bottom, 50px);
+  color:white
+}
+
+
+.section-subtitle {
+  color: var(--greyblack);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-600);
+  padding: 5px 20px;
+  background: rgb(36,156,76);
+  width: max-content;
+  border-radius: 50px;
+  margin-inline: auto;
+  margin-bottom: 15px;
+}
+
+li { list-style: none; }
+
+.service {
+  background: var(--cultured-greyblack);
+  padding-block: var(--section-padding);
+}
+
+.service-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+}
+
+.service-card {
+  position: relative;
+  background: var(--greyblack);
+  text-align: center;
+  padding: 20px 30px;
+  box-shadow: var(--shadow-2);
+}
+
+.service-card .card-icon {
+  width: 150px;
+  margin-inline: auto;
+  margin-bottom: 20px;
+}
+
+#icon2{
+  width:121px;
+}
+
+.service-card .card-title { margin-bottom: 15px; }
+
+.card-title { color: white;}
+
+.service-card .card-title > p:is(:hover, :focus) { color: var(--greeny); }
+
+.service-card .card-text {
+  color: var(--white);
+  font-size: var(--fs-5);
+  line-height: 1.8;
+  margin-bottom: 25px;
+}
+
+.service-card .card-link {
+  color: var(--white);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-600);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.service-card:is(:hover, :focus) .card-link { color: var(--greeny); }
+
+.service-card::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 4px;
+  background: var(--greeny);
+  transition: var(--transition);
+}
+
+.service-card:is(:hover, :focus)::after { width: 100%; }
+
+
+
+/*-----------------------------------*\
+  #FOOTER
+\*-----------------------------------*/
+
+.footer {
+  background: var(--raisin-black-1);
+  color: var(--white);
+  margin-bottom: 20px;
+}
+
+.footer .container { padding-inline: 40px; }
+
+.footer a { color: white; }
+
+.footer-top {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.footer-brand { margin-bottom: 0px; display: flex; justify-content: center; }
+
+.footer-brand .logo { margin-bottom: -30px; }
+
+
+.section-text {
+  font-size: var(--fs-4);
+  line-height: 1.8;
+  margin-bottom: 30px;
+  max-width: 45ch;
+}
+
+.contact-link {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.contact-link ion-icon { font-size: 18px; }
+
+.contact-link :is(address, span) {
+  font-size: var(--fs-5);
+  transition: var(--transition);
+}
+
+.contact-link:is(:hover, :focus) span { color: var(--greeny); }
+
+.footer-list:not(:last-child) { margin-bottom: 50px; }
+
+.footer-list-title {
+  font-family: var(--ff-poppins);
+  font-size: var(--fs-3);
+  font-weight: var(--fw-700);
+  margin-bottom: 15px;
+}
+
+.footer-link {
+  font-size: var(--fs-5);
+  padding-block: 10px;
+}
+
+.footer-link:is(:hover, :focus) { color: var(--greeny); }
+
+.footer-bottom {
+  background: var(--raisin-black-2);
+  padding-block: 25px;
+}
+
+.copyright {
+  font-size: var(--fs-3);
+  text-align: center;
+}
+
+.copyright a { display: inline-block; }
+
+.copyright a:is(:hover, :focus) { color: var(--greeny); }
+
+/**
+   * FOOTER
+   */
+
+   .footer-link-box {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+    .footer { margin-bottom: 0; }
